# Church

./: Makefile  README.md  alembic.ini  docker-compose-local.yaml  main.py  pyproject.toml  settings.py
api/: handlers.py  models.py
db/: dals.py  models.py  session.py
migrations/: env.py
migrations/versions/: 1bb692e77d4f_create_table_for_users.py  e7d06e72d86b_create_table_for_news.py
tests/: conftest.py
