[project]
name = "church"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "envparse>=0.2.0",
    "fastapi>=0.120.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
